@@ -205,8 +205,12 @@ start_idle_timer (void)
 	{
 		init_timer();
 	}
-	idle_dialog_activate_timer (idle_dialog);
-	active_dialog_deactivate_timer (active_dialog);
+
+	if (timer_is_running ())
+	{
+		idle_dialog_activate_timer (idle_dialog);
+		active_dialog_deactivate_timer (active_dialog);
+	}
 }
 
 void
@@ -216,7 +220,7 @@ start_no_project_timer (void)
 	{
 		init_timer();
 	}
-	if (!idle_dialog_is_visible(idle_dialog))
+	if (!idle_dialog_is_visible (idle_dialog) && timer_is_running ())
 	{
 		idle_dialog_deactivate_timer (idle_dialog);
 		active_dialog_activate_timer (active_dialog);
